[package]
name = "ez_boom"
version = "0.1.0"
authors = ["Kyle Coffey <mariorules24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
parking_lot = "0.11"
bitflags = "1.2"
lazy_static = "1.4"
sdl2 = "0.34"
num = "0.3"
bounded-integer = "0.2"
num_enum = "0.5"
counted-array = "0.1"
faccess = "0.2"
byteorder = "1.3"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
dirs = "3.0"
shrinkwraprs = "0.3"
macro-attr = "0.2"

[build-dependencies]
chrono = "0.4"
